myelin-macros/tests/ui/fail_api_id_overflow.stderr
error: myelin::service: api_id = 70000 does not fit in u16 (max 65535)
 --> tests/ui/fail_api_id_overflow.rs:1:28
  |
1 | #[myelin::service(api_id = 70000)]
  |                            ^^^^^
